--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -56,7 +56,7 @@
   # url: https://google.com
   img: /static/assets/img/landing/language.png
   desc: "Objectif :
-        Notre but est de représenter une vue dynamique à l’intérieur d’un labyrinthe dans lequel on peut se déplacer. \n \n"
+        Inspiré du célèbre jeu éponyme des années 90 qui fut le premier First Person Shooter, ce projet vous permet d’aborder la technique du ray-casting. Notre but sera de représenter une vue dynamique à l’intérieur d’un labyrinthe dans lequel on peut se déplacer"
 
 - name: Piscine PHP
   i18n: Piscine PHP
