--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -31,9 +31,8 @@
   desc: "Objectif :
         Ce projet à pour but de coder une fonction qui renvoît une ligne terminée par un retour à la 
         ligne lue depuis un descripteur de fichier
-        Vous experimenterez également plus profondément les allocations, qu’elles aient lieu sur la 
-        pile ou sur le tas, la manipulation et le cycle de vie d’un buffer, et la complexité inattendue.
-        qu’implique l’utilisation d’une ou plusieurs variables statiques."
+        Nous experimentons plus profondément les allocations, qu’elles aient lieu sur la 
+        pile ou sur le tas, la manipulation et le cycle de vie d’un buffer, et la complexité inattendue qu’implique l’utilisation d’une ou plusieurs variables statiques."
 
 - name: Fractol
   i18n: Fractol
@@ -75,7 +74,7 @@
 - name: Matcha
   i18n: Matcha
   # url: https://google.com
-  img: /static/assets/img/landing/node_js.png
+  img: /static/assets/img/landing/test.png
   desc: "Objectif :
         Réaliser, un site Web de rencontre avec le language de notre choix, Un utilisateur devra donc pouvoir s’inscrire, se connecter, compléter son profil, parcourir et rechercher d’autres utilisateurs, les liker
         , et chatter avec ceux qui auront liké en retour.
