--- a/_data/index/links.yml
+++ b/_data/index/links.yml
@@ -1,18 +1,18 @@
 links section data
-- last_name: Name 1
+- last_name: Git Hub
   first_name:
   desc: CEO
-  website: https://www.google.com
-  email: ceo@google.com
+  website: https://github.com/vacrozet
+  email: vacrozet@student.42.fr
 
 - last_name: Ecole 42
-  first_name: Ecole 42
+  first_name: 
   desc: Born To Code ?
   website: https://www.42.us.org/
-  website: https://www.42.fr/
+  email: vacrozet@student.42.fr
 
-- last_name: LN
-  first_name: FN
-  desc: COO
-  website: https://github.com
-  email: coo@google.com
+- last_name: My
+  first_name: Linkedin
+  desc: 
+  website: https://www.linkedin.com/in/valentin-crozet-592751a3
+  email: crozet.valentin.42@gmail.com
