--- a/_data/index/links.yml
+++ b/_data/index/links.yml
@@ -8,7 +8,7 @@ links section data
 - last_name: Ecole 42
   first_name: 
   desc: Born To Code ?
-  website: https://www.42.us.org/
+  website: https://www.42.us.org
   email: vacrozet@student.42.fr
 
 - last_name: My
